--- a/source/index.html
+++ b/source/index.html
@@ -197,8 +197,10 @@
               <h2 class="heading feedback__heading">Остались вопросы? Задайте их нам!</h2>
               <form class="form" action="https://echo.htmlacademy.ru" method="post">
                 <p class="feedback__subheading">Мы проконсультируем Вас бесплатно</p>
-                <input type="text" name="first-name" placeholder="Имя" required>
-                <input type="tel" name="phone-number" placeholder="Телефон" required>
+                <label for="first-name" class="visually-hidden">Имя</label>
+                <input type="text" name="first-name" id="first-name" placeholder="Имя" required>
+                <label for="phone-number" class="visually-hidden">Телефон</label>
+                <input type="tel" name="phone-number" id="phone-number" placeholder="Телефон" required>
                 <textarea name="question" cols="30" rows="6" placeholder="Ваш вопрос"></textarea>
                 <button type="submit">Задать вопрос</button>
                 <label>
@@ -304,8 +306,10 @@
           <form class="form" action="https://echo.htmlacademy.ru" method="post">
             <h2>Закажите звонок</h2>
             <p>Оставьте контакты, мы проконсультируем вас бесплатно в удобное время</p>
-            <input type="text" name="first-name" placeholder="Имя" required>
-            <input type="tel" name="phone-number" placeholder="Телефон" required>
+            <label for="first-name-modal" class="visually-hidden">Имя</label>
+            <input type="text" name="first-name" id="first-name-modal" placeholder="Имя" required>
+            <label for="phone-number-modal" class="visually-hidden">Телефон</label>
+            <input type="tel" name="phone-number" placeholder="Телефон" id="phone-number-modal" required>
             <textarea name="question" cols="30" rows="6" placeholder="Ваш вопрос"></textarea>
             <button type="submit">Отправить</button>
             <label>
