--- a/source/index.html
+++ b/source/index.html
@@ -53,7 +53,7 @@
           <picture>
             <source type="image/webp" srcset="./img/about-bg-desktop.webp, ./img/about-bg-desktop@2x.webp 2x" width="1920" height="880">
 
-            <img class="main-block__background" src="./img/about-bg-desktop.jpg" srcset="./img/about-bg-desktop@2x.jpg" alt="Плата с микросхемами" width="1920" height="880">
+            <img class="main-block__background" src="./img/about-bg-desktop.jp" srcset="./img/about-bg-desktop@2x.jp" alt="Плата с микросхемами" width="1920" height="880">
           </picture>
           <div class="container main-block__container">
             <h2>Печатные <br> платы</h2>
@@ -303,7 +303,7 @@
       <div class="modal__wrapper">
         <div class="modal__overlay" data-close-modal></div>
         <div class="modal__content">
-          <form class="form" action="https://echo.htmlacademy.ru" method="post">
+          <form class="form form--modal" action="https://echo.htmlacademy.ru" method="post">
             <h2>Закажите звонок</h2>
             <p>Оставьте контакты, мы проконсультируем вас бесплатно в удобное время</p>
             <label for="first-name-modal" class="visually-hidden">Имя</label>
